# CFA

./: .gitignore  .gitmodules  README.md  build.gradle.kts  release.keystore  settings.gradle  settings.gradle.kts  signing.properties
.github/workflows/: build.yml  test.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/: BaseActivity.kt  ExternalImportActivity.kt  FilesActivity.kt  MainActivity.kt  MainApplication.kt  NewProfileActivity.kt  ProfilesActivity.kt  PropertiesActivity.kt  ProvidersActivity.kt  ProxyActivity.kt  TileService.kt
common/: build.gradle  build.gradle.kts
common/src/main/: AndroidManifest.xml
core/: build.gradle  build.gradle.kts  consumer-rules.pro
core/golang_blob/: blob.go
core/src/golang/: go.mod  go.sum  main.go
core/src/golang/clash/: README.md  go.mod  go.sum  main.go
core/src/main/cpp/: CMakeLists.txt  bridge_helper.c  jni_helper.c  jni_helper.h  main.c
core/src/main/golang/: app.go  bridge.c  bridge.h  config.go  go.mod  go.sum  main.go  proxy.go  tun.go  tunnel.go
core/src/main/java/: Clash.kt
design/: build.gradle
design/src/main/java/: Design.kt  FilesDesign.kt  MainDesign.kt  NewProfileDesign.kt  ProfilesDesign.kt  PropertiesDesign.kt  ProvidersDesign.kt  ProxyDesign.kt
service/src/main/: AndroidManifest.xml
service/src/main/java/: ClashManager.kt  ClashService.kt  FilesProvider.kt  PreferenceProvider.kt  ProfileManager.kt  ProfileProcessor.kt  ProfileReceiver.kt  ProfileWorker.kt  StatusProvider.kt  TunService.kt
(+238 files in other folders)
